<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_gray"
    android:gravity="center"
    android:orientation="vertical">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_170sdp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/error" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/roboto_medium"
        tools:text="@string/something_went_wrong"
        android:textAlignment="center"
        android:textColor="@color/soft_red"
        android:textSize="@dimen/_16ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/roboto_medium"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="@string/lets_try_again"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/roboto_bold"
        android:backgroundTint="@color/white"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/black_80"
        android:textSize="@dimen/_12ssp" />
</LinearLayout>