<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="@dimen/_12sdp"
    android:paddingVertical="@dimen/_8sdp"
    android:background="@color/dark_gray">

    <LinearLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loadingMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:lines="2"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/hang_on_loading_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13ssp" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/_27sdp"
            android:layout_height="@dimen/_27sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/errorMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:lines="2"
            android:maxLines="2"
            android:ellipsize="end"
            tools:text="@string/could_not_load_content"
            android:textColor="@color/soft_red"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/retryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/roboto_medium"
            android:padding="@dimen/_5sdp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/Retry"
            android:textAllCaps="false"
            android:textColor="?colorSecondary"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>