<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context=".ui.github_repository.RepositoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_rectangle_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="@dimen/_8sdp"
                android:drawableTint="@color/black_40"
                android:ellipsize="end"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:hint="@string/search_all_repositories"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/_8sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black_60"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toStartOf="@+id/btnSearchIcon"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/btnSearchIcon"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:background="@drawable/bg_ripple_search_btn"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/repositoryListText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:fontFamily="@font/roboto_bold"
        android:paddingVertical="@dimen/_5sdp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:text="Repository List: flutter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repositoryListText"
        tools:itemCount="20"
        tools:listitem="@layout/item_github_repositoroy"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/noRepositoriesFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_12sdp"
        android:text="@string/no_repositories_available"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/_15ssp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repositoryListText" />

    <include
        android:id="@+id/layoutRetry"
        layout="@layout/layout_retry"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repositoryListText" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repositoryListText"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>